--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  Font Test
   <form action="#">
   </form>
 <script src="javascript.js" defer></script>
