--- a/index.html
+++ b/index.html
@@ -1,15 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Form Project</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Google Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
 </head>
+
 <body>
-  Font Test
-  <form action="#">
-  </form>
-<script src="javascript.js" defer></script>
+  <div class="wrapper">
+    <!-- Logo Section -->
+    <div class="logo-section">
+      <div class="logo-banner">
+        <img src="Assets/odin-lined.png" alt="">
+        <h1>odin</h1>
+      </div>
+      <p>Photo by
+        <a href="#">Halie West</a> on
+        <a href="#">Unsplash</a>
+      </p>
+    </div>
+    <!-- Form -->
+    <form action="#">
+      <section>
+        <h2>Let's do this!</h2>
+        <fieldset>
+          <legend>Sign Up Credentials</legend>
+          <div>
+            <label for="name">first name</label>
+            <input type="text" id="name" name="name">
+          </div>
+          <div>
+            <label for="last-name">last name</label>
+            <input type="text" id="last-name" name="last-name">
+          </div>
+          <div>
+            <label for="email">email</label>
+            <input type="email" name="email" id="email">
+          </div>
+          <div>
+            <label for="phone-number">phone number</label>
+            <input type="tel" name="phone-number" id="phone-number">
+            input
+          </div>
+          <div>
+            <label for="password">password</label>
+            <input type="password" name="password" id="password">
+          </div>
+          <div>
+            <label for="confirm-password">confirm password</label>
+            <input type="password" name="confirm-password" id="confirm-password">
+          </div>
+        </fieldset>
+      </section>
+      <section>
+        <button type="submit">Create Account</button>
+        <p>Already have an account? <a href="#">Log in</a></p>
+      </section>
+    </form>
+  </div>
+
+  <script src="javascript.js" defer></script>
 </body>
+
 </html>
