Done Form Layout

--- a/index.html
+++ b/index.html
@@ -28,36 +28,48 @@
     </div>
     <!-- Form -->
     <form action="#">
-      <section>
-        <h2>Let's do this!</h2>
-        <fieldset>
+      <section class="motivational-quote">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod qui rerum mollitia itaque sapiente corporis
+          dolorem quisquam, soluta alias a.</p>
+        <br>
+        <span> Libero autem quasi sit quos maxime ea iusto fugit deleniti.</span>
+      </section>
+      <section class="form-inputs">
+        <div>
+          <h2>Let's do this!</h2>
           <legend>Sign Up Credentials</legend>
-          <div>
+        </div>
+        <div class="form-row">
+          <div class="input-field">
             <label for="name">first name</label>
             <input type="text" id="name" name="name">
           </div>
-          <div>
+          <div class="input-field">
             <label for="last-name">last name</label>
             <input type="text" id="last-name" name="last-name">
           </div>
-          <div>
+        </div>
+        <div class="form-row">
+          <div class="input-field">
             <label for="email">email</label>
             <input type="email" name="email" id="email">
           </div>
-          <div>
+          <div class="input-field">
             <label for="phone-number">phone number</label>
             <input type="tel" name="phone-number" id="phone-number">
-            input
           </div>
-          <div>
+        </div>
+        <div class="form-row">
+          <div class="input-field">
             <label for="password">password</label>
             <input type="password" name="password" id="password">
           </div>
-          <div>
+          <div class="input-field">
             <label for="confirm-password">confirm password</label>
             <input type="password" name="confirm-password" id="confirm-password">
           </div>
-        </fieldset>
+        </div>
+
       </section>
       <section>
         <button type="submit">Create Account</button>
