--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Form -->
     <form action="#">
       <section class="motivational-quote">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod qui rerum mollitia itaque sapiente corporis
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod qui rerum mollitia itaque <i>sapiente</i> corporis
           dolorem quisquam, soluta alias a.</p>
         <br>
         <span> Libero autem quasi sit quos maxime ea iusto fugit deleniti.</span>
@@ -71,7 +71,7 @@
         </div>
 
       </section>
-      <section>
+      <section class="submit-section">
         <button type="submit">Create Account</button>
         <p>Already have an account? <a href="#">Log in</a></p>
       </section>
